--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,4 +37,11 @@ app.jwt-expiration-ms=86400000
 # Swagger UI config
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+logging.level.org.springframework.security=DEBUG
+ # Afficher les d\u00e9tails des erreurs dans les r\u00e9ponses
+server.error.include-message=always
+server.error.include-binding-errors=always
+
+spring.mvc.view.prefix=/templates/
+spring.mvc.view.suffix=.html
 
