--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,12 +24,11 @@ spring.http.encoding.force=true
 # CONFIGURATION DU SERVEUR
 # =============================
 server.port=9090                             
-
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE
+spring.web.cors.allowed-headers=*
 # =============================
 # CONFIGURATION JWT
-# =============================
-app.jwt-secret=MyJwtSecretKeyForDemoPurposesOnly1234567890!
-app.jwt-expiration-ms=86400000               
+# =============================              
 
 # =============================
 # CONFIGURATION SWAGGER / SPRINGDOC
@@ -41,7 +40,18 @@ logging.level.org.springframework.security=DEBUG
  # Afficher les d\u00e9tails des erreurs dans les r\u00e9ponses
 server.error.include-message=always
 server.error.include-binding-errors=always
-
+springdoc.api-auth.path=/v3/api-docs
 spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
+# JWT Settings
+app.jwt-secret=MaCl\u00e9JWTUltraSecr\u00e8te1234567890!@#
+app.jwt-expiration-ms=86400000
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
+image.upload.dir=C:/Dev/ecommerce-from-jee/src/main/resources/static/images
+
+S
+spring.web.resources.static-locations=file:/C:/Dev/ecommerce-from-jee/src/main/resources/static/
+logging.level.com.ecommerce.ecommerce_from.jee=DEBUG
+logging.file.name=logs/application.log
