--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # =============================
 # CONFIGURATION DU SERVEUR
@@ -51,7 +55,7 @@ spring.servlet.multipart.max-request-size=10MB
 
 image.upload.dir=C:/Dev/ecommerce-from-jee/src/main/resources/static/images
 
-S
+
 spring.web.resources.static-locations=file:/C:/Dev/ecommerce-from-jee/src/main/resources/static/
 logging.level.com.ecommerce.ecommerce_from.jee=DEBUG
 logging.file.name=logs/application.log
