--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,53 +9,69 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # =============================
 # CONFIGURATION JPA / HIBERNATE
 # =============================
-spring.jpa.hibernate.ddl-auto=update         
-spring.jpa.show-sql=true                    
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-# =============================
-# ENCODAGE HTTP
-# =============================
-spring.http.encoding.charset=UTF-8
-spring.http.encoding.enabled=true
-spring.http.encoding.force=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # =============================
-# CONFIGURATION DU SERVEUR
+# CONFIGURATION SERVEUR HTTPS
 # =============================
-server.port=9090                             
+server.port=8443
+server.ssl.enabled=true
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=62678063
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=ecommerceSSL
+
+# =============================
+# CORS
+# =============================
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE
 spring.web.cors.allowed-headers=*
+
+# =============================
+# ENCODAGE HTTP
+# =============================
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
+
 # =============================
 # CONFIGURATION JWT
-# =============================              
+# =============================
+app.jwtSecret=MaCl\u00e9JWTUltraSecr\u00e8te1234567890!@#
+app.jwtExpirationMs=86400000
+
+# =============================
+# CONFIGURATION MULTIPART
+# =============================
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# =============================
+# CONFIGURATION DES RESSOURCES STATIQUES
+# =============================
+image.upload.dir=src/main/resources/static/images
+spring.web.resources.static-locations=classpath:/static/
 
 # =============================
 # CONFIGURATION SWAGGER / SPRINGDOC
 # =============================
-# Swagger UI config
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
-logging.level.org.springframework.security=DEBUG
- # Afficher les d\u00e9tails des erreurs dans les r\u00e9ponses
-server.error.include-message=always
-server.error.include-binding-errors=always
-springdoc.api-auth.path=/v3/api-docs
-spring.mvc.view.prefix=/templates/
-spring.mvc.view.suffix=.html
-# JWT Settings
-app.jwt-secret=MaCl\u00e9JWTUltraSecr\u00e8te1234567890!@#
-app.jwt-expiration-ms=86400000
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
 
-image.upload.dir=C:/Dev/ecommerce-from-jee/src/main/resources/static/images
-
-
-spring.web.resources.static-locations=file:/C:/Dev/ecommerce-from-jee/src/main/resources/static/
+# =============================
+# LOGGING
+# =============================
 logging.level.com.ecommerce.ecommerce_from.jee=DEBUG
 logging.file.name=logs/application.log
+server.error.include-message=always
+server.error.include-binding-errors=always
+
+# =============================
+# VERSION API
+# =============================
+api.version=/api/v1
