--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -118,12 +118,12 @@ management.tracing.sampling.probability=1.0
 management.otlp.tracing.endpoint=http://otel-collector:4317
 
 # Local only (comment out for Render)
-spring.datasource.url=jdbc:mysql://localhost:3312/ecommerce_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://localhost:3312/ecommerce_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=
 
 # Render will override with env vars
-spring.jpa.hibernate.ddl-auto=update
-server.port=8080  # Render uses $PORT
-springdoc.swagger-ui.enabled=true  # For Swagger
+#spring.jpa.hibernate.ddl-auto=update
+#server.port=8080  # Render uses $PORT
+#springdoc.swagger-ui.enabled=true  # For Swagger
 
